--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ a.btn:hover {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    margin-left: 50%;
     z-index: 999;
 }
 /*/css header*/
@@ -87,7 +88,8 @@ a.btn:hover {
 
 /*header*/
 header {
-    min-width: 15%;
+    width: 15%;
+    min-width: 190px;
     background-color: var(--black-header);
     height: calc(100% - 70px);
 }
@@ -104,7 +106,6 @@ header ul {
 }
 
 header ul li {
-    background-color: rgba(8,11,18,0.7);
     margin-top: 0.5em;
     height: 1.5em;
 }
@@ -135,6 +136,44 @@ header ul li:hover div,
 header ul li:focus div {
     display: inline-block;
     background-color: var(--green-underline);
+}
+.playlist {
+    margin-top: 1em;
+    margin-left: 1em;
+    overflow: auto;
+    width: 100%;
+    height: 50%;
+}
+
+.playlist span {
+    font-weight: 900;
+    font-size: 0.8em;
+    color:white;
+}
+
+.playlist ul li {
+    height: 1.5em;
+}
+
+.playlist ul {
+    font-size: 0.8em;
+    color: var(--grey-text);
+    list-style: none;
+}
+
+.playlist ul li button i {
+    font-size: 2em;
+    vertical-align: middle;
+}
+
+.playlist ul li:first-child {
+    margin-bottom: 1em;
+    line-height: 1em;
+    margin-left: -1em;
+}
+
+.playlist ul li:hover {
+    color: white;
 }
 /*/header*/
 
