--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ a.btn:hover {
 /*css container*/
 .container {
     height: 100vh;
+    overflow: hidden;
 }
 /*/css container*/
 
@@ -143,7 +144,7 @@ header ul li:focus div {
     margin-left: 1em;
     overflow: auto;
     width: 100%;
-    height: 50%;
+    height: calc(100% - 260px);
 }
 
 .playlist span {
@@ -180,12 +181,9 @@ header ul li:focus div {
 
 /*inzio css playlist-footer*/
 .playlist-footer {
-    height: 19%;
-    max-height: 10000px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
+    height: 70px;
+    overflow: hidden;
+    width: 100%;
     margin-left: 1em;
 }
 
@@ -281,10 +279,28 @@ main {
 
 /*css-nav-footer*/
 .nav-footer {
+    width: 100%;
+    height: 70px;
     min-height: 70px;
     background-color: var(--black-nav-footer);
     position: fixed;
     bottom: 0em;
     z-index: 99999;
+    display: flex;
+}
+
+.nav-footer-sx {
+    width: 20%;
+    background-color: chartreuse;
+}
+
+.nav-footer-cx {
+    width: 60%;
+    background-color: coral;
+}
+
+.nav-footer-dx {
+    width: 20%;
+    background-color: crimson;
 }
 /*/css nav-footer*/
