--- a/style.css
+++ b/style.css
@@ -368,22 +368,53 @@ main {
     margin-top: 2em;
 }
 
+.playlist-button {
+    top: 3.5em;
+    width: 100%;
+    height: 11em;
+    position: absolute;
+    cursor: pointer;
+    display: none;
+}
+
+.playlist-button button {
+    color: white;
+    background-color: transparent;
+    border: none;
+}
+
+.playlist-button button i {
+    font-size: 4em;
+}
+
 .Creato-per-playlist .list {
     height: 230px;
     width: 15.4%;
     max-width: 200px;
     margin-right: 1em;
     text-align: center;
+    position: relative;
 }
 
 .Creato-per-playlist .list img {
     width: 100%;
 }
 
-.list h3 {;
+.list h3 {
     color:white;
     font-size: 0.8em;
 }
+
+.list:hover img {
+    filter: grayscale(100%);
+    filter: opacity(0.3);
+    cursor: pointer;
+}
+
+.list:hover .playlist-button{
+    display: block;
+}
+
 /*css main-song*/
 /*/css main-song*/
 /*/css main/header*/
