--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ a.btn:hover {
 
 /*css container*/
 .container {
+    max-width: 2560px;
     height: 100vh;
     overflow: hidden;
     width: 100%;
@@ -154,6 +155,7 @@ header ul li:focus div {
     overflow: auto;
     height: calc(100% - 260px);
     width: 100%;
+    min-height: 100px;
 }
 
 .playlist span {
@@ -483,6 +485,7 @@ main {
 
 /*css-nav-footer*/
 .nav-footer {
+    max-width: 2375px;
     width: 100%;
     height: 70px;
     min-height: 70px;
@@ -811,6 +814,26 @@ main {
     .nav-header {
         left: 200px;
     }
+
+    .nav-footer-dx ul {
+        flex-direction: column;
+    }
+
+    .volume {
+        margin-top: 2.5em;
+    }
+
+    .play-button {
+        top: 4em;
+    }
+
+    .playlist-button {
+        top: 4em;
+    }
+
+    .artista-button {
+        top: 4.2em;
+    }
 }
 @media screen and (max-width: 600px) {
      .playlist {
@@ -862,5 +885,17 @@ main {
      a.btn {
          margin-right: 5em;
      }
+
+     .play-button {
+        top: 5em;
+    }
+
+    .playlist-button {
+        top: 5em;
+    }
+
+    .artista-button {
+        top: 5.2em;
+    }
 }
 /*/media*/
